# vibecoder

./: .env.demo  .env.full  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  debug-test-fix-plan.md  release-checklist.md  roadmap.md  todo-closure-audit.md
licenses/: ASSET_PROVENANCE.md  CC0-AUDIO-NOTICE.md  Inter-OFL.txt  SmolLM2-135M-Instruct-NOTICE.txt  THIRD_PARTY_NOTICES.md  wllama-NOTICE.txt
models/: README.md
plan/: 01-wizja.md  02-rozgrywka.md  03-balans.md  04-prestiz.md  05-fabula.md  06-ui-ux.md  07-architektura.md  08-roadmapa.md  09-content.md  10-jakosc.md  11-wydania.md  README.md
release/: m12-qa.md
review/: README.md  _template.md  review_1.md  review_10.md  review_11.md  review_12.md  review_13.md  review_14.md  review_15.md  review_16.md  review_17.md  review_2.md  review_3.md  review_4.md  review_5.md  review_6.md  review_7.md  review_8.md  review_9.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: achievements-stats.test.ts  actions-bankruptcy.test.ts  aurora.test.ts  bank.test.ts  bignum.test.ts  compute.test.ts  costs.test.ts  debt.test.ts  dev-perf-panel.test.ts  endless.test.ts  export-save.test.ts  format.test.ts  game-loop.test.ts  hype.test.ts  jsdom.d.ts  loop.test.ts  m10-endless.test.ts  m12-release.test.ts  m13-window-manager.test.ts  m9-content-exit.test.ts  (+22 more)
(+136 files in other folders)
