[package]
name = "vibecoder"
version = "1.0.0"
description = "VIBECODER desktop"
authors = ["VIBECODER"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vibecoder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
